<resources>
    <string name="app_name">HelpApp</string>
    <string name="txtEmail">Email</string>
    <string name="txtSenha">Senha</string>
    <string name="btnEntrarLogin">Entrar</string>
    <string name="txtCadastrarLogin">Não é cadastrado? toque aqui para cadastrar</string>
    <string name="btnCadastrarLogin">Cadastrar</string>
    <string name="txtCadastrarTela">Insira algumas informações para realizarmos seu cadastro</string>
    <string name="txtNome">Nome</string>
    <string name="txtIdade">Idade</string>
    <string name="txtRepetirSenha">Confirme sua senha</string>
    <string name="txtEndereco">Endereço</string>
    <string name="txtConfirmarCadastro">Confirmar</string>
    <string name="title_activity_help_maps">"Mapa de ajuda"</string>
    <string name="txtBemVindo">"Bem vindo(a) ao Help App!"</string>
    <string name="txtExpMapa">Para adicionar um ponto no mapa de ajuda, clique no botão abaixo</string>
    <string name="txtExpVerMapa">Para ver os locais que tem pessoas necessitadas, clique no botão abaixo</string>
    <string name="btnAddPontoMapa">Adicionar local ao mapa</string>
    <string name="btnVerPontosMapa">Ver locais </string>
    <string name="txtAddPontoNome">Nome</string>
    <string name="txtAddPontoDescricao">Descrição</string>

</resources>
